Update images and config
Plus other misc changes

--- a/_rooms/bosss-office.html
+++ b/_rooms/bosss-office.html
@@ -1,7 +1,7 @@
 ---
 title: Boss's Office
 teaser: You accidentally sent out a job application to your current boss and have 1 hour to retrieve it before she returns from lunch.
-image: desk2.jpg
+image: desk.jpg
 attribution: Photo use under CC0 License https://www.pexels.com/photo/black-and-white-blog-business-chocolate-261577/
 ---
 
