Add all content

--- a/_pages/company.html
+++ b/_pages/company.html
@@ -1,6 +1,44 @@
 ---
 permalink: /company/
 layout: default
+published: false
 ---
 
-{% include hero.html %}
+
+<div class="container-fluid">
+  <h1>Company</h1>
+
+  <section>
+    <h2>The first escape room designed for corporate events</h2>
+
+    <p>We help companies of all sizes unlock...</p>
+    <p>Escape On Demand gives teams the freedom to...</p>
+  </section>
+
+  <section>
+    <h2>History</h2>
+    <p>Escape On Demand was founded with a lofty objective: to offer large groups the opportunity to participate in escape rooms which were previously reserved for groups no larger than 40 members.</p>
+    <p>There was also a lack of alternative team-building options.</p>
+    <p>We created Escape On Demand to provide an alternative that focused on the essentials of team-building.</p>
+
+    Our vision and business idea
+
+At IKEA our vision is to create a better everyday life for the many people. Our business idea supports this vision by offering a wide range of well-designed, functional home furnishing products at prices so low that as many people as possible will be able to afford them.
+  </section>
+
+  <section>
+    <h2>Core Values</h2>
+
+    <dl>
+      <dt>Question Assumptions</dt>
+      <dd>True innovation and problem solving call us to question
+  everything, even our own bias.</dd>
+      <dt>Think Deeply</dt>
+      <dd>Good design thinking considers the task at hand as well
+  as all the surrounding systems.</dd>
+      <dt>Integrity</dt>
+      <dd>Say what you mean, mean what you say. Work hard
+  regardless of who is or isn't watching.</dd>
+    </dl>
+  </section>
+</div>
