--- a/_pages/team-building.html
+++ b/_pages/team-building.html
@@ -3,3 +3,13 @@ permalink: /team-building/
 layout: default
 ---
 
+<div class="container-fluid pv4">
+  <h1>Team Building</h1>
+
+  <ul>
+    <li>Not the same old trust fall team building event</li>
+    <li>Team building through an experience</li>
+    <li>Promotes the development of 21st Century Skills</li>
+    <li>The best team building events are the ones that don't feel like a day at the office. Sharing in on an experience while working toward a common goal allows bonds to grow more organically</li>
+  </ul>
+</div>
