--- a/_rooms/the-witching-hour.html
+++ b/_rooms/the-witching-hour.html
@@ -1,8 +1,8 @@
 ---
 title: The Witching Hour
-teaser: Will you escape before the witch returns at the height of her powers?
+teaser: Can you escape before the witch returns at midnight?
 image: forest.jpg
 attribution: Photo use under CC0 License https://www.pexels.com/photo/night-building-forest-trees-42263/
 ---
 
-Witchhunters stepped into the witches den looking for her but she is out and the door closes by a spell. She will be back at the witching hour of midnight (when she is strongest). Can you find the spell to unlock the door and defeat her before she returns?
+You are witch hunters and have entered a witches cabin in the hopes of surprising her. A spell suddenly locks the door behind you and you realize you have one hour before she returns at midnight. Can you escape and gain back the element of surprise in time?
