Update primary and secondary colors. Add contact cta

--- a/_rooms/happy-hour.html
+++ b/_rooms/happy-hour.html
@@ -5,18 +5,4 @@ image: desk.jpg
 attribution: Photo use under CC0 License https://www.pexels.com/photo/black-and-white-blog-business-chocolate-261577/
 ---
 
-<div class="row">
-  <div class="col-xs-12 col-sm-8">
-    <p>You are turning reports in to your boss's office at the end of the day when the door shuts and locks behind you. You know he has a spare key hidden somewhere in his office but he is a bit eccentric and used a series of puzzles to keep it hidden. To make matters worse you only have one hour to get out and make it to happy hour on time.</p>
-  </div>
-
-  <!--
-  <div class="col-xs-12 col-sm-4">
-    <h3>Promotes</h3>
-    <ul>
-      <li>Corporate goals that this promotes</li>
-      <li>Missions and values</li>
-    </ul>
-  </div>
-  -->
-</div>
+You are turning reports in to your boss's office at the end of the day when the door shuts and locks behind you. You know he has a spare key hidden somewhere in his office but he is a bit eccentric and used a series of puzzles to keep it hidden. To make matters worse you only have one hour to get out and make it to happy hour on time.
