--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,6 +3,18 @@ permalink: /contact/
 layout: default
 ---
 
-<div class="container-fluid pv4">
-  <h1>Contact Us</h1>
+<div class="container-fluid pt4 pb6">
+  <h1 class="f-subheadline lh-title mt0 tc">Get in touch.</h1>
+
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
+      <div class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
+        <h1 class="f5 ttu mt0">General</h1>
+        <hr class="mw3 ml0 ba bw1 b--secondary">
+        <p class="lh-copy measure center f6 black-70">
+          <a href="mailto:events@escapeondemand.com" class="link lh-copy secondary">events@escapeondemand.com</a>
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
