Update contact phone and fix room headlines

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -10,10 +10,19 @@ layout: default
   <div class="row">
     <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
       <div class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-        <h1 class="f5 ttu mt0">General</h1>
+        <h1 class="f5 ttu mt0">Email</h1>
         <hr class="mw3 ml0 ba bw1 b--secondary">
         <p class="lh-copy measure center f6 black-70">
           <a href="mailto:events@escapeondemand.com" class="link lh-copy secondary">events@escapeondemand.com</a>
+        </p>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
+      <div class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
+        <h1 class="f5 ttu mt0">Phone</h1>
+        <hr class="mw3 ml0 ba bw1 b--secondary">
+        <p class="lh-copy measure center f6 black-70">
+          <a href="tel:7023017345" class="link lh-copy secondary">(702) 301-7345</a>
         </p>
       </div>
     </div>
