Update faq content

--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -16,12 +16,6 @@ layout: page
     <dt class="f4 fw6 mb1 mt4 lh-title">Who is it for?</dt>
     <dd class="ml0">Escape On Demand is designed for teams that want to work on communication and team building or just want a fun activity during a corporate event.</dd>
 
-    <dt class="f4 fw6 mb1 mt4 lh-title">How do I book an event?</dt>
-    <dd class="ml0">Visit our <a class="link underline secondary" href="{{ site.base_url }}/contact/">Contact</a> page.</dd>
-
-    <dt class="f4 fw6 mb1 mt4 lh-title">When should our group arrive for the game?</dt>
-    <dd class="ml0">It is best to arrive 10 minutes before the event as dictated by your event coordinator.</dd>
-
     <dt class="f4 fw6 mb1 mt4 lh-title">Do I need to bring anything with me?</dt>
     <dd class="ml0">No. Any material needed for the event will be provided by Escape On Demand.</dd>
 
@@ -40,14 +34,8 @@ layout: page
     <dt class="f4 fw6 mb1 mt4 lh-title">Will we be locked in the room?</dt>
     <dd class="ml0">No. Participants may leave at any time. Fire Code regulations prevent any door from physically hindering an exit in the event of an emergency.</dd>
 
-    <dt class="f4 fw6 mb1 mt4 lh-title">Are tickets refundable?</dt>
-    <dd class="ml0">Our refund policy can be found in the event contract. <a class="link underline secondary" href="{{ site.base_url }}/contact/">Contact</a> us for more information.</dd>
-
     <dt class="f4 fw6 mb1 mt4 lh-title">Can I take photos or videos while playing the games?</dt>
     <dd class="ml0">Photos and videos may be taken outside of the escape rooms. But upon entering a room we ask that you do not take photos or videos. We want to make sure the mysteries are kept secret so everyone who comes has fun!</dd>
-
-    <dt class="f4 fw6 mb1 mt4 lh-title">What does a game cost?</dt>
-    <dd class="ml0">Please contact your Event Coordinator for our prices.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">How many people can play?</dt>
     <dd class="ml0">We offer a flexible plan that can handle anywhere from 20 to 160 participants in one session.</dd>
@@ -61,13 +49,16 @@ layout: page
     <dt class="f4 fw6 mb1 mt4 lh-title">Are games physically demanding?</dt>
     <dd class="ml0">No, our games are designed for everyone. Players will be standing and moving about the room but seating will be provided upon request.</dd>
 
-    <dt class="f4 fw6 mb1 mt4 lh-title">How do I contact you?</dt>
+    <dt class="f4 fw6 mb1 mt4 lh-title">How do I book an event?</dt>
+    <dd class="ml0">Please <a class="link underline secondary" href="{{ site.base_url }}/contact/">contact</a> us to discuss your event and to make a reservation.</dd>
+
+    <dt class="f4 fw6 mb1 mt4 lh-title">What does a game cost?</dt>
+    <dd class="ml0"><a class="link underline secondary" href="{{ site.base_url }}/contact/">Contact</a> us for a customized event proposal.</dd>
+
+    <dt class="f4 fw6 mb1 mt4 lh-title">How do I make a reservation or contact you for more information?</dt>
     <dd class="ml0">For additional questions please see our <a class="link underline secondary" href="{{ site.base_url }}/contact/">contact</a> page.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">When should I make a reservation?</dt>
-    <dd class="ml0">Reservations should be made 60+ days before an event for the best pricing.</dd>
-
-    <dt class="f4 fw6 mb1 mt4 lh-title">How do I make a reservation?</dt>
-    <dd class="ml0">Please <a class="link underline secondary" href="{{ site.base_url }}/contact/">contact</a> us to discuss your event and to make a reservation.</dd>
+    <dd class="ml0">We request reservations to be made 60+ days in advance to ensure best quality.</dd>
   </dl>
 </div>
