Update order of faq questions

--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -16,26 +16,29 @@ layout: page
     <dt class="f4 fw6 mb1 mt4 lh-title">Who is it for?</dt>
     <dd class="ml0">Escape On Demand is designed for teams that want to work on communication and team building or just want a fun activity during a corporate event.</dd>
 
+    <dt class="f4 fw6 mb1 mt4 lh-title">Are games physically demanding?</dt>
+    <dd class="ml0">No, our games are designed for everyone. Players will be standing and moving about the room but seating will be provided upon request.</dd>
+
     <dt class="f4 fw6 mb1 mt4 lh-title">Do I need to bring anything with me?</dt>
     <dd class="ml0">No. Any material needed for the event will be provided by Escape On Demand.</dd>
 
+    <dt class="f4 fw6 mb1 mt4 lh-title">Will we be locked in the room?</dt>
+    <dd class="ml0">No. Participants may leave at any time. Fire Code regulations prevent any door from physically hindering an exit in the event of an emergency.</dd>
+
     <dt class="f4 fw6 mb1 mt4 lh-title">Are there cameras in the game rooms?</dt>
     <dd class="ml0">Yes, we use cameras to monitor your game experience and to help ensure your safety.</dd>
+
+    <dt class="f4 fw6 mb1 mt4 lh-title">Can I take photos or videos while playing the games?</dt>
+    <dd class="ml0">Photos and videos may be taken outside of the escape rooms. But upon entering a room we ask that you do not take photos or videos. We want to make sure the mysteries are kept secret so everyone who comes has fun!</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">What if we don't know what to do next?</dt>
     <dd class="ml0">Teams can reach out for help at any time using the walkie talkies provided to them. We offer each team up to 3 free hints, so use them wisely.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">What if 3 hints aren't enough for us to escape?</dt>
-    <dd class="ml0">Upon request, we may provide additional hints to a team to ensure an enjoyable experience but each additional hint will add three minutes to your final time.</dd>
+    <dd class="ml0">Upon request, we may provide additional hints to a team to ensure an enjoyable experience but each additional hint will result in a three minute penalty being added to your official time.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">What if we don't escape in time?</dt>
     <dd class="ml0">No worries, not everyone will escape. At the conclusion of the hour, a game master will be available to answer any questions regarding the room and its puzzles.</dd>
-
-    <dt class="f4 fw6 mb1 mt4 lh-title">Will we be locked in the room?</dt>
-    <dd class="ml0">No. Participants may leave at any time. Fire Code regulations prevent any door from physically hindering an exit in the event of an emergency.</dd>
-
-    <dt class="f4 fw6 mb1 mt4 lh-title">Can I take photos or videos while playing the games?</dt>
-    <dd class="ml0">Photos and videos may be taken outside of the escape rooms. But upon entering a room we ask that you do not take photos or videos. We want to make sure the mysteries are kept secret so everyone who comes has fun!</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">How many people can play?</dt>
     <dd class="ml0">We offer a flexible plan that can handle anywhere from 20 to 160 participants in one session.</dd>
@@ -46,19 +49,13 @@ layout: page
     <dt class="f4 fw6 mb1 mt4 lh-title">How long will the experience last?</dt>
     <dd class="ml0">The entire experience will normally take 1.5 to 2 hours but may vary depending on the options you've requested. The game itself lasts one hour, and we will provide a video briefing before the game starts.</dd>
 
-    <dt class="f4 fw6 mb1 mt4 lh-title">Are games physically demanding?</dt>
-    <dd class="ml0">No, our games are designed for everyone. Players will be standing and moving about the room but seating will be provided upon request.</dd>
-
-    <dt class="f4 fw6 mb1 mt4 lh-title">How do I book an event?</dt>
-    <dd class="ml0">Please <a class="link underline secondary" href="{{ site.base_url }}/contact/">contact</a> us to discuss your event and to make a reservation.</dd>
-
     <dt class="f4 fw6 mb1 mt4 lh-title">What does a game cost?</dt>
     <dd class="ml0"><a class="link underline secondary" href="{{ site.base_url }}/contact/">Contact</a> us for a customized event proposal.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">How do I make a reservation or contact you for more information?</dt>
-    <dd class="ml0">For additional questions please see our <a class="link underline secondary" href="{{ site.base_url }}/contact/">contact</a> page.</dd>
+    <dd class="ml0">Please <a class="link underline secondary" href="{{ site.base_url }}/contact/">contact</a> us to discuss your event, to make a reservation, or to answer any additional questions.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">When should I make a reservation?</dt>
-    <dd class="ml0">We request reservations to be made 60+ days in advance to ensure best quality.</dd>
+    <dd class="ml0">We request reservations to be made 60+ days in advance to ensure the best quality.</dd>
   </dl>
 </div>
