Update page layouts, footer and section bgs

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,12 +1,10 @@
 ---
-title: Contact
+title: Contact Us
 permalink: /contact/
-layout: default
+layout: page
 ---
 
 <div class="container-fluid pt4 pb6">
-  <h1 class="f-subheadline lh-title mt0 tc">Get in touch.</h1>
-
   <div class="row">
     <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
       <div class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
