--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -7,7 +7,7 @@ layout: page
 
 <div class="container-fluid">
   <dl class="lh-copy mw7">
-    <dt class="f4 fw6 mb1 mt4 lh-title">What is Escape On Demand?</dt>
+    <dt class="f4 fw6 mb1 lh-title">What is Escape On Demand?</dt>
     <dd class="ml0">Escape On Demand is an interactive and immersive entertainment concept. It is a real-life escape game designed for large groups and brought to your event.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">What is an escape room?</dt>
