Update homepage copy

--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -11,7 +11,7 @@ layout: page
     <dd class="ml0">Escape On Demand is an interactive and immersive entertainment concept. It is a real-life escape game designed for large groups and brought to your event.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">What is an escape room?</dt>
-    <dd class="ml0">An escape room is a type of adventure game in which participants have to use elements of the room to solve a series of mysteries by finding clues, cracking codes, and solving puzzles to escape within a one hour time limit.</dd>
+    <dd class="ml0">An escape room is a physical adventure game where teams of 3-8 players are put in a custom themed room and given 60 minutes to escape. Players must work together to find clues, solve puzzles, and decode hidden messages.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">Who is it for?</dt>
     <dd class="ml0">Escape On Demand is designed for teams that want to work on communication and team building or just want a fun activity during a corporate event.</dd>
@@ -20,7 +20,7 @@ layout: page
     <dd class="ml0">No, our games are designed for everyone. Players will be standing and moving about the room but seating will be provided upon request.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">Do I need to bring anything with me?</dt>
-    <dd class="ml0">No. Any material needed for the event will be provided by Escape On Demand.</dd>
+    <dd class="ml0">No. Any material needed for the event will be provided by Escape On Demand. Just come with a positive mindset and be prepared to think outside the box.</dd>
 
     <dt class="f4 fw6 mb1 mt4 lh-title">Will we be locked in the room?</dt>
     <dd class="ml0">No. Participants may leave at any time. Fire Code regulations prevent any door from physically hindering an exit in the event of an emergency.</dd>
