--- a/_rooms/genetilab.html
+++ b/_rooms/genetilab.html
@@ -5,4 +5,4 @@ image: lab.jpg
 attribution: Photo use under CC0 License https://www.pexels.com/photo/close-up-of-drinking-glass-248152/
 ---
 
-Your friend calls you and says he has broken into GenetiLab because he suspects they are doing human testing. He is about to be captured and needs you to rescue him. Knowing you can't call the police because he was trespassing and has no proof, you head to GenetiLab. Upon making it inside you are captured and chained in a lab. You have one hour to escape before the testing begins.
+Your friend calls you and says he has broken into GenetiLab because he suspects they are doing human testing. He is about to be captured and needs your help. Knowing you can’t call the police because he was trespassing and has no proof, you head to GenetiLab. Upon making it inside you are captured and chained in a lab. You have one hour to escape before the testing begins.
