Swap brick image

--- a/_rooms/enchanted-escape.html
+++ b/_rooms/enchanted-escape.html
@@ -1,7 +1,7 @@
 ---
 title: Enchanted Escape
 teaser: The Big Bad Wolf has trapped you in the brick house of the 3 little pigs.
-image: brick-wall.jpeg
+image: brick-house.jpeg
 attribution: Photo use under CC0 License https://www.pexels.com/photo/shallow-focus-photography-of-brown-and-gray-bricked-wall-205325/
 ---
 
